--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,4 +26,4 @@ jobs:
         context: .
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: minecraft-playerlist:$(date +%s)
+        tags: minecraft-playerlist:${{ github.run_id }}
