--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,11 +19,9 @@ jobs:
     - name: Buildx 설정
       uses: docker/setup-buildx-action@v2
 
+    - name: Set build timestamp
+      id: timestamp
+      run: echo "TAG=$(date +%s)" >> $GITHUB_ENV
       
     - name: Build the Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: minecraft-playerlist:${{ github.run_id }}
+      run: docker buildx --platform linux/amd64,linux/arm64 -t minecraft-playerlist:$(date +%s)
