--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,21 +7,22 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
+    # ubuntu-latest github runner 사용
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout 코드 가져오기
-      uses: actions/checkout@v4
+      # repository checkout
+      - uses: actions/checkout@v4
 
-    - name: Buildx 설정
-      uses: docker/setup-buildx-action@v2
-
-    - name: Set build timestamp
-      id: timestamp
-      run: echo "TAG=$(date +%s)" >> $GITHUB_ENV
+      # tonistiigi/binfmt 이미지를 이용해 qemu 설치
+      - name: Docker Setup QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       
-    - name: Build the Docker image
-      run: docker buildx --platform linux/amd64,linux/arm64 -t minecraft-playerlist:$(date +%s)
+      # docker buildx 설치
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v2
+              
+      # buildx 명령어로 amd64, arm64 아키텍처 이미지 빌드 
+      - name: Build the Docker image
+        run: docker buildx build --platform linux/amd64,linux/arm64 -t minecraft-playerlist:$(date +%s)
