--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,4 +22,4 @@ jobs:
               
       # buildx 명령어로 amd64, arm64 아키텍처 이미지 빌드 
       - name: Build the Docker image
-        run: docker buildx build --platform linux/amd64,linux/arm64 -t minecraft-playerlist:$(date +%s)
+        run: docker buildx build --platform linux/amd64,linux/arm64 -t minecraft-playerlist:$(date +%s) .
