--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,16 +9,35 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
       
-    # tonistiigi/binfmt 이미지를 이용해 qemu 설치
-    - name: Docker Setup QEMU
-      uses: docker/setup-qemu-action@v1.2.0
-  
-    # docker buildx 설치
-    - name: Docker Setup Buildx
-      uses: docker/setup-buildx-action@v1.6.0
+      # QEMU를 사용하여 멀티 아키텍처 지원
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+      
+      # Buildx 설정
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v1.6.0
 
-    - name: Build the Docker image
-      run: docker buildx build --platform linux/amd64,linux/arm64 --tag minecraft-playerlist:$(date +%s) --push .
+      # GHCR에 로그인 (GHCR 토큰을 secrets에 등록해두어야 함)
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      # 현재 날짜를 태그로 사용하기 위해 환경 변수에 저장 (예: YYYYMMDD 형식)
+      - name: Set date tag
+        id: set_date_tag
+        run: echo "TAG=$(date +%Y%m%d)" >> $GITHUB_ENV
+
+      # 멀티 아키텍처 이미지 빌드 및 GHCR에 푸시
+      - name: Build and push multi-arch Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/minecraft-playerlist:${{ env.TAG }}
