--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v4
         with:
-          # platforms: linux/amd64,linux/arm64
+          context: .
           push: true
           tags: ghcr.io/${{ github.repository }}:${{ github.event.inputs.tag }}
+          platforms: |
+            linux/amd64
+            linux/arm64
