--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,9 @@
 name: Docker Image CI
 
 on:
+  # push:
+  #   tags:
+  #     - '*'
   workflow_dispatch:
     inputs:
       tag:
@@ -35,9 +38,12 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository }}:${{ github.event.inputs.tag }}
+          provenance: false
+          tags: |
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.ref_name }}
           platforms: |
             linux/amd64
             linux/arm64
